# ml_lib

./: .gitignore  .mcp.json  .pre-commit-config.yaml  ANALYSIS.md  AUDITORIA_DIFFUSION.md  AUDITORIA_DIFFUSION_PARTE2.md  AUDITORIA_DIFFUSION_RESUMEN.md  CLEANUP-SUMMARY.md  CURRENT-TASK.md  DIFFUSION_MODULE_AUDIT.md  DIFFUSION_RESTRUCTURE_PLAN.md  GENERATION_SUMMARY.md  MEJORAS_MODELOS.md  README.md  SUMMARY.md  __init__.py  claude.md  example_models.py  example_visualization.py  gemini.md  loras.txt  models.db  pyproject.toml  requirements_diffusion.txt  test_basic.py  test_intelligent_generation.py  test_models.py  test_real_local_v2.py
docs/: AUDITORIA_01_COMPARACION.md  AUDIT_01_diffusion_services.md  AUDIT_02_diffusion_models.md  AUDIT_03_system_module.md  AUDIT_04_architecture_global.md  AUDIT_SUMMARY.md  CODE_QUALITY_GUIDELINES.md  COMFYUI_MODEL_COMPATIBILITY.md  DICT_USAGE_GUIDELINES.md  IMAGE_METADATA.md  INTELLIGENT_GENERATION.md  MEMORY_OPTIMIZATION_MARKET_VALUE.md  REFACTOR_PROGRESS.md  SESSION_CLIP_VISION_INTEGRATION.md  SESSION_COMFYUI_INTEGRATION.md  SESSION_MEMORY_OPTIMIZER_INTEGRATION.md  intelligent_architecture.md  migration_guide.md  ml-api-skills-architecture.md  ml_advanced_course.md  ml_library_structure.py  skill-strict-typing.txt
docs/backlog/: README.md
ecoml_analyzer/: README.md  example_linalg.py  example_models.py  example_usage.py  main.py  test_basic.py  test_linalg.py  test_models.py
examples/: README.md  auto_download_demo.py  character_to_image_demo.py  comfyui_integration_example.py  complete_generation_demo.py  end_to_end_demo.py  example_linalg.py  example_visualization.py  main.py  metadata_examples.py  migration_demo.py  quickstart_generation.py  test_linalg.py  visualization_gallery.py
scripts/: auto_generate_properties.py  check_module_structure.py  install_mcp_server.sh  migrate_data_to_properties.py  migrate_metadata.py  quick_commit.sh  start_mcp_servers.sh  update_enums_to_base.py
tests/: intelligent_character_generation.py  quick_test_clip.py  test_clean_arch_generation.py  test_clip_vision_real.py  test_commands.py  test_compaction.py  test_e2e_integration.py  test_enhanced_generation.py  test_entities_only.py  test_events.py  test_extended_features.py  test_intelligent_generation.py  test_intent_detection_strategies.py  test_lora_entity.py  test_lora_recommendation_service.py  test_nsfw_lora_selection.py  test_nsfw_quality_validation.py  test_ollama_analysis.py  test_ollama_management.py  test_ollama_simple.py  test_optimization_strategies.py  test_processed_prompt.py  test_prompt_analyzer_integration.py  test_prompt_compaction.py  test_prompt_optimization.py  test_quality_validation_commands.py  test_queries.py  test_real_generation.py  test_real_local.py  test_real_nsfw.py  test_real_simple.py  test_refactoring.py  test_sqlite_model_repository.py  test_tokenization_strategies.py  test_value_objects.py
(+1055 files in other folders)
