[project]
name = "ml-lib"
version = "0.1.0"
description = "Library for machine learning algorithms"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "numpy>=2.3.3",
    "scipy>=1.16.2",
    "pandas>=2.3.3",
    "typing-extensions>=4.15.0",
    "pyyaml>=6.0",
    "matplotlib>=3.10.0",
    "seaborn>=0.13.2",
    "plotly>=6.3.1",
    "scikit-learn>=1.7.2",
    "torch>=2.8.0",
    "diffusers>=0.35.0",
    "transformers>=4.57.0",
    "accelerate>=1.10.1",
    "safetensors>=0.6.2",
    "Pillow>=11.3.0",
    "requests>=2.32.0",
    "tqdm>=4.67.1",
    "peft>=0.15.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "mypy>=1.18.2",
    "black>=25.9.0",
    "flake8>=7.3.0",
    "isort>=7.0.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["ml_lib*"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "pytest-asyncio>=0.24.0",
    "mypy>=1.18.2",
    "black>=25.9.0",
    "flake8>=7.3.0",
    "isort>=7.0.0",
]
